Fixed width of content on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -124,8 +124,16 @@ body {
   min-width: 500px;
   margin: 0 auto;
   margin-top: 30px;
-  padding: 0 20px;
 }
+
+@media screen and (max-width: 700px) {
+  .content-inner-container {
+    max-width: 95%;
+    min-width: 95%;
+    width: 95%;
+  }
+}
+
 .logo-img {
   width: 100px;
 }
